# mazer

./: .gitignore  CMakeLists.txt  README.md
include/: algorithms.hpp  camera.hpp  libs.hpp  mainwindow.hpp  mazeglwidget.hpp  shaderprogram.hpp
include/gameobject/: gameobject.hpp  playerobject.hpp  wallobject.hpp
lib/: mazer.ilk
src/: CMakeLists.txt  algorithms.cpp  algorithms.hpp  camera.cpp  congrats_dialog.ui  gameobject.cpp  gameobject.hpp  libs.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  mazeglwidget.cpp  mazeglwidget.hpp  objLoader.cpp  objLoader.hpp  objectLoader.cpp  objectLoader.hpp  playerobject.cpp  resources.qrc  shaderprogram.cpp  shaderprogram.hpp  vertex.hpp  wallobject.cpp
src/resources/: slime.mtl
src/resources/glsl/: object_fs.glsl  object_vs.glsl
src/resources/objects/: slime.psd
